# Aries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aries_build.sh  config.sh
example/: Makefile  Makefile_VCK190  README.md  add.mlir  gemm.mlir  test_in.mlir
example/example_dyn_multi_gemm/: Makefile  gemm.mlir
example/example_gemm/: Makefile
example/example_gemm/fp32/: Makefile  gemm.mlir  gemm_fp32.py
example/example_gemm/int16/: Makefile  gemm.mlir  gemm_int16.py
example/example_gemm/int32/: Makefile  gemm.mlir  gemm_int32.py
example/example_gemm/int8/: Makefile  gemm.mlir  gemm_int8.py
example/example_mttkrp/: Makefile  mttkrp.mlir  mttkrp_int32.py
example/example_multi_gemm/: Makefile  gemm.mlir
example/example_ttm/: Makefile  ttm.mlir  ttm_int32.py
example/example_ttmc/: Makefile  ttmc.mlir  ttmc_int32.py
example/gemm_352cores/: auto_kernel_gemm_aie.mlir  gemm.adf.mlir  system.cfg
example/gemm_352cores/aie/: adf_graph.h  kernel_gemm.cc
example/gemm_352cores/kernel/: hls.cpp
example/template_files/: Makefile_VCK190  system.cfg
example_new/: README.md
example_new/example_gemm/: gemm.py
example_new/example_gemm/example_project/: Makefile
example_new/example_gemm/my_project/: Makefile  (+1 more)
example_new/example_mttkrp/: mttkrp.py
example_new/example_ttmc/: ttmc.py
frontend/: __init__.py  aries_ir_builder.py
include/: CMakeLists.txt
include/aries/: CMakeLists.txt  InitAllDialects.h
lib/: CMakeLists.txt
lib/Conversion/: ADFConvertToAIE.cpp  AriesDMAToIO.cpp  AriesLowerToADF.cpp  CMakeLists.txt  Passes.cpp
lib/Transform/: AriesADFCellCreate.cpp  AriesADFGraphCreate.cpp  AriesADFTest.cpp  AriesAXIPacking.cpp  AriesBroadcastDetect.cpp  AriesBroadcastToForwarding.cpp  AriesBurstDetection.cpp  AriesCorePlacement.cpp  AriesDMAToIO.cpp  AriesDependencyExtract.cpp  AriesFileSplit.cpp  AriesFuncEliminate.cpp  AriesFuncExtract.cpp  AriesFuncUnroll.cpp  AriesGMIOMaterialize.cpp  AriesIOMaterialize.cpp  AriesIOPlacement.cpp  AriesKernelInterfaceCreate.cpp  AriesKernelSplit.cpp  AriesL2BufferCreate.cpp  AriesLocalDataForward.cpp  AriesLoopSimplify.cpp  AriesMemCopy.cpp  AriesMemHoist.cpp  AriesMemSubview.cpp  AriesPLDataflow.cpp  AriesPLDoubleBuffer.cpp  AriesPLIOMaterialize.cpp  AriesPLSerialize.cpp  AriesTiling.cpp  CMakeLists.txt  Passes.cpp  Utils.cpp
lib/Translation/: CMakeLists.txt  EmitADFCpp.cpp  EmitAIEVecToCpp.cpp  EmitAriesCpp.cpp  EmitKernelFunc.cpp  EmitKernelHeader.cpp  Emitter.cpp
newfrontend/: __init__.py  aries_api.py  aries_decorators.py  aries_ir_builder.py  aries_types.py  gen_make.py  gen_template.py
templates/: Makefile_ARIES
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/aries-opt/: mmult.mlir
test/frontend/: pass_through_1d.py  pass_through_2d.py
tools/: CMakeLists.txt
tools/aries-opt/: CMakeLists.txt  aries-opt.cpp
tools/aries-translate/: CMakeLists.txt  aries-translate.cpp
tutorial/: compare1.mlir  compare2.mlir  temp.mlir  test.mlir
tutorial/easy/: test.sh
tutorial/gemm64/: gemm.py
tutorial/ttmc/: test.sh
utils/: README.md  aiesim.py  build-aries.sh  build-llvm.sh  build-mlir-aie.sh  requirements.txt  setup_python_packages.sh
(+144 files in other folders)
